--- a/index.html
+++ b/index.html
@@ -65,15 +65,30 @@
               </ul>
             </div>
          </div> 
-        </div> 
+        <div class="weather-forecast" id="forecast">
+          <div class="row">
+            <div class="col-2"><div class="weather-forecast-date">tj</div>
+
+             <img src="http://openweathermap.org/img/wn/02n@2x.png" alt="" width="42"/> <div class="weather-forecast-temperatures">
+          
+             <span clas="weather-forecast-temperatures-max">30°</span> <span clas="weather-forecast-temperatures-min">40°</span> 
+           </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+    </div>
       </div>
         <p class="name">
           <a href="https://github.com/schaz98/shevanilla" target="-blank"
             >Open-source code</a
           >, by Shay
         </p>
-    
-    </div> 
+        </div> 
+
   <script src="src/app.js"></script>
   </body>
 </html>
