--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <form id="search-form">
             <div class="row">
               <div class="col-9">
+
                 <input
                   type="search"
                   placeholder="Type a city..."
@@ -38,12 +39,12 @@
               </div>
             </div>
           </form>
-
           <div class="overview">
             <h1 id="city"></h1>
-            <ul>
+              <ul>
+                <div id="date"></div>
                 <div class="">
-              <li> <span id="date"></span></li>
+              <li> </li>
             
           </div>
           <div >
@@ -60,8 +61,9 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> km/h</li>
+               <li>
+                💦 Humidity: <span id="humidity"></span>%</li>
+                <li>💨 Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
          </div> 
@@ -74,21 +76,14 @@
              <span clas="weather-forecast-temperatures-max">30°</span> <span clas="weather-forecast-temperatures-min">40°</span> 
            </div>
           </div>
-
-
-
-
         </div>
       </div>
     </div>
       </div>
-        <p class="name">
-          <a href="https://github.com/schaz98/shevanilla" target="-blank"
-            >Open-source code</a
-          >, by Shay
-        </p>
+      <footer><a href="https://github.com/filesbychiara/chiara-weather-app" target="_blank">Open-source code</a> by Shahrzad Raouf</footer>
         </div> 
 
   <script src="src/app.js"></script>
   </body>
 </html>
+
