--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </div>
       </div>
-      <footer><a href="https://github.com/filesbychiara/chiara-weather-app" target="_blank">Open-source code</a> by Shahrzad Raouf</footer>
+      <footer><a href="https://github.com/schaz98/tamrin2" target="_blank">Open-source code</a> by Shahrzad Raouf</footer>
         </div> 
 
   <script src="src/app.js"></script>
