deleted the conversion

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
           <div >
             <div >
               <div class="">
-                <img  alt="" id="icon" class="float-center" /> <li id="description"></li><strong id="temperature" class="temperature"></strong>
+                <img  alt="" id="icon" class="float-center" /> <li id="description"></li><strong id="temperature" class="temperature"></strong><span class="unit">°C</span>
       <div> 
                   <span class="units"
-                    ><a href="#" class="active">°C </a> /
-                    <a href="#" id="fahrenheit-link"> °F </a></span
+                    ><a href="#" class="active"> </a> 
+                    <a href="#" id="fahrenheit-link"> </a></span
                   >
                 </div>
               </div>
